       EPSON PX-1200 (EXPERIMENTAL)
       EPSON PX-1600F (EXPERIMENTAL)
       EPSON PX-1700F (EXPERIMENTAL)

     - Canon inkjets:

       Canon PIXMA iP7200 (EXPERIMENTAL)
       Canon PIXMA MG2200 (EXPERIMENTAL)
       Canon PIXMA MG3200 (EXPERIMENTAL)
       Canon PIXMA MG4200 (EXPERIMENTAL)
       Canon PIXMA MG5400 (EXPERIMENTAL)
       Canon PIXMA MG6300 (EXPERIMENTAL)

     - Canon dye-sublimation printers:

       Canon SELPHY CP810
       Canon SELPHY CP900

       Added back after removal in 5.2.9 release:

       Canon SELPHY CP600 *1
       Canon SELPHY CP720 
       Canon SELPHY CP780 (including improved support)
       Canon SELPHY CP800
       Canon SELPHY ES1
       Canon SELPHY ES2
       Canon SELPHY ES3
       Canon SELPHY ES20 *1
       Canon SELPHY ES30
       Canon SELPHY ES40

       Improved support:

       Canon CP-220       *1
       Canon SELPHY CP520 *1
       Canon SELPHY CP530 *1
       Canon SELPHY CP740
       Canon SELPHY CP750
       Canon SELPHY CP760
       Canon SELPHY CP770

       The intelligent CUPS spooler required to support the 
       SELPHY CP and ES models is now part of the gutenprint package.
       The USB PIDs for the following two SELPHY CP series models
       are still missing, and therefore unsupported in the spooler:

       Canon SELPHY CP520
       Canon SELPHY CP790

	*1: We have not confirmed these printers function with the new
	    backend, but they are presumed to work.

     - Mitsubishi Dye-Sublimation printers:

       Mitsubishi CP3020D/DU/DE (EXPERIMENTAL)
       Mitsubishi CP3020DA/DAE  (EXPERIMENTAL)

	None of these have been tested and confirmed to work (or not), so 
	feedback is welcome.  

     - Kodak Dye-Sublimation printers:

       Kodak 1400

	The Kodak 1400 requires an intelligent spooler/backend, which is
	bundled with this release.

       Kodak 6800 (EXPERIMENTAL)
       Kodak 6850 (EXPERIMENTAL)
       Kodak 605  (EXPERIMENTAL)
       Kodak 805  (EXPERIMENTAL)